# Code-Snipper-Explainer

./: .env.docker.example  .gitignore  DOCKER_README.md  README.md  docker-compose.override.yml  docker-compose.yml  docker.ps1  health-check.ps1
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt  test_explain.py
backend/app/: __init__.py  main.py
backend/app/application/: __init__.py  dependencies.py  dispatch.py
backend/app/application/commands/: __init__.py  explain_code_command.py  generate_tests_command.py  refactor_code_command.py
backend/app/application/dto/: __init__.py  explain_result_dto.py  refactor_result_dto.py  test_scaffold_result_dto.py
backend/app/application/handlers/: __init__.py  explain_code_handler.py  generate_tests_handler.py  refactor_code_handler.py
backend/app/application/interfaces/: __init__.py  ai_provider.py  command_repository.py  query_repository.py
backend/app/application/queries/: __init__.py
backend/app/domain/: __init__.py  exceptions.py
backend/app/domain/events/: base.py
backend/app/domain/services/: code_validation_service.py
backend/app/domain/value_objects/: __init__.py  code_explanation.py  code_refactor.py  code_snippet.py  test_scaffold.py
backend/app/infrastructure/: __init__.py  settings.py
backend/app/infrastructure/ai/: fake_ai_provider.py  (+1 more)
backend/app/presentation/: __init__.py  dependencies.py  exception_handlers.py
backend/tests/: test_ping.py
backend/tests/config/: __init__.py
backend/tests/integration/: __init__.py
backend/tests/unit/: __init__.py
(+43 files in other folders)
