[tool.poetry]
name = "ai-code-assistant-backend"
version = "0.0.1"
description = "Minimal backend bootstrap for AI Code Assistant"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
httpx = "^0.27.0"
ruff = "^0.5.0"
mypy = "^1.10.0"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"